--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -39,6 +39,10 @@ defaults:
     values:
       image: true
 
+# Google Analytics
+google_analytics: UA-225654033-1
+
+
 #remote_theme: pages-themes/minimal@v0.2.0
 #plugins:
 #  - jekyll-remote-theme  
